# sakuva-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/scripts/: deploy.sh
.github/workflows/: deploy.yml
app/: .env.template  config.py  dependencies.py  main.py  models.py  routes.py  util.py
app/services/: es.py  image.py
app/services/db/: db.py
app/services/db/tables/: image.sql
app/services/es/: es.py
app/services/es/mappings/: reindex_example.sh  search_as_you_type.json
prod/: Caddyfile.template  docker-compose.template.yml
